--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
       src="https://kit.fontawesome.com/02d2689b68.js"
       crossorigin="anonymous"
     ></script>
-    <title>React App</title>
+    <title>Todo App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
